--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,10 +28,11 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  width: 1200px;
 }
 
-.main_container {
+.container {
+  margin: 0 auto;
+  width: 1200px;
   flex-grow: 1;
 }
 
@@ -72,6 +73,7 @@ body {
 .navigation_list {
   min-width: 339px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
   padding-left: 30px;
@@ -105,6 +107,7 @@ body {
   height: 64px;
   align-items: center;
   margin: 0;
+
 }
 
 .navigation_link_button {
@@ -148,12 +151,14 @@ body {
 .hero_title {
   text-transform: uppercase;
   text-align: center;
-  max-width: 620px;
   padding-left: 290px;
   padding-right: 290px;
   padding-top: 69px;
   padding-bottom: 25px;
   margin: 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
 }
 
 .hero_description {
@@ -172,12 +177,13 @@ body {
 
 .advantages_container {
   display: flex;
-  flex-direction: column;
-  margin: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .advantages_list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
   padding: 0;
@@ -245,7 +251,7 @@ body {
   content: url("../images/advantages/house.svg");
   position: absolute;
   top: 60px;
-  left: 162.5px;
+  left: 2.5px;
   right: 162.5px;
 }
 
@@ -285,10 +291,11 @@ body {
 }
 
 .advantages_item_blue {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   background-color: rgba(130, 179, 211, 1);
   min-width: 400px;
-  max-height: 384px;
+  min-height: 384px;
   margin: 0;
   color: rgba(255, 255, 255, 1);
 }
@@ -297,12 +304,11 @@ body {
   background-color: rgba(130, 179, 211, 0.12);
   width: 400px;
   min-height: 384px;
-  display: flex;
-  flex-direction: column;
 }
 
-.advantages_item .nolight_blue {
+.advantages_item_nolight_blue {
   display: flex;
+  flex-direction: column;
   background-color: rgba(130, 179, 211, 0.2);
   width: 400px;
   min-height: 384px;
@@ -414,10 +420,10 @@ body {
   border: none;
   width: 232px;
   height: 52px;
-  font-size: 20px;
   font-weight: 700;
-  color: rgba(255, 255, 255, 1);
+  font-size: 20px;
   line-height: 36px;
+  color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
   background-color: rgba(130, 179, 211, 1);
 }
