--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,9 +51,10 @@ body {
   color: rgba(0, 0, 0, 1);
   background-color: rgba(255, 255, 255, 1);
   width: 100%;
-  height: 64px;
-  display: flex;
-}
+  min-height: 64px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  }
 
 .navigation_logo {
   padding-left: 70px;
@@ -77,13 +78,12 @@ body {
   justify-content: space-between;
   margin: 0;
   padding-left: 30px;
+  padding-right: 285px;
   list-style: none;
-  max-width: 64px;
 }
 
 .navigation_right {
   margin: 0;
-  padding-top: 14px;
   padding-right: 70px;
   width: 268px;
   align-items: center;
@@ -104,10 +104,8 @@ body {
 .navigation_icons {
   display: flex;
   width: 88px;
-  height: 64px;
-  align-items: center;
   margin: 0;
-
+  vertical-align: middle;
 }
 
 .navigation_link_button {
@@ -120,7 +118,7 @@ body {
   text-decoration: none;
   text-align: center;
   min-width: 160px;
-  height: 36px;
+  min-height: 36px;
   text-transform: uppercase;
   margin: 0;
 }
