--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@ body {
   min-height: 64px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  }
+}
 
 .navigation_logo {
   padding-left: 70px;
@@ -149,6 +149,12 @@ body {
 .hero_description {
   text-align: center;
   max-width: 0;
+  color: rgba(0, 0, 0, 1);
+  min-width: 651px;
+  align-items: center;
+  padding-right: 275px;
+  padding-left: 275px;
+  padding-bottom: 90px;
   margin: 0;
 }
 
@@ -163,16 +169,6 @@ body {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-}
-
-.hero_description {
-  min-width: 651px;
-  align-items: center;
-  padding-right: 275px;
-  padding-left: 275px;
-  padding-top: 25px;
-  padding-bottom: 90px;
-  margin: 0;
 }
 
 .advantages {
@@ -205,6 +201,20 @@ body {
   min-height: 55px;
   margin: 0;
   padding-top: 92px;
+  padding-left: 112.5px;
+  padding-right: 112.5px;
+}
+
+.advantages_title_light_blue {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  min-width: 175px;
+  min-height: 55px;
+  margin: 0;
+  padding-top: 102px;
   padding-left: 112.5px;
   padding-right: 112.5px;
 }
@@ -254,7 +264,7 @@ body {
   background-size: contain;
   content: url("../images/advantages/house.svg");
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 2.5px;
   right: 162.5px;
 }
@@ -265,7 +275,7 @@ body {
   background-size: contain;
   content: url("../images/advantages/food.svg");
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 162.5px;
   right: 162.5px;
 }
@@ -276,7 +286,7 @@ body {
   background-size: contain;
   content: url("../images/advantages/gifts.svg");
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 162.5px;
   right: 162.5px;
 }
@@ -367,7 +377,7 @@ body {
   text-transform: uppercase;
   margin-left: 412px;
   margin-right: 412px;
-  margin-bottom: 88px;
+  margin-bottom: 96px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 50px;
@@ -389,6 +399,7 @@ body {
   width: 100%;
   height: 414px;
   margin: 0;
+
 }
 
 .subscribe_title {
@@ -397,7 +408,7 @@ body {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(242, 242, 242, 1);
   min-width: 404px;
   padding-top: 96px;
   padding-bottom: 20px;
@@ -422,7 +433,7 @@ body {
 .subscribe_button {
   border-radius: 0 4px 4px 0;
   border: none;
-  width: 232px;
+  width: 242px;
   height: 52px;
   font-weight: 700;
   font-size: 20px;
@@ -453,8 +464,9 @@ input {
 }
 
 .footer_container {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
   max-width: 1060px;
   max-height: 120px;
   margin: 0;
@@ -477,17 +489,20 @@ input {
 
 .footer_navigation_link {
   margin: 0;
-  padding: 0;
   width: 115px;
 }
+
 .contacts_tel {
   text-decoration: none;
   color: rgba(0, 0, 0, 1);
+  font-weight: 400;
   font-size: 40px;
-  min-width: 331px;
+  line-height: 40px;
   min-height: 40px;
+  min-width: 331px;
   margin: 0;
-  padding-left: 195px;
+  padding-top: 5px;
+  padding-left: 205px;
   padding-right: 194px;
 }
 
