--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -28,10 +28,11 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  width: 1200px;
 }
 
-.main_container {
+.container {
+  margin: 0 auto;
+  width: 1200px;
   flex-grow: 1;
 }
 
@@ -50,8 +51,9 @@ body {
   color: rgba(0, 0, 0, 1);
   background-color: rgba(255, 255, 255, 1);
   width: 100%;
-  height: 64px;
-  display: flex;
+  min-height: 64px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .navigation_logo {
@@ -63,25 +65,28 @@ body {
 }
 
 .navigation {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   margin: 0;
   width: 100%;
+  min-height: 64px;
 }
 
 .navigation_list {
   min-width: 339px;
+  max-height: 64px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
   padding-left: 30px;
+  padding-right: 285px;
   list-style: none;
-  max-width: 64px;
 }
 
 .navigation_right {
   margin: 0;
-  padding-top: 14px;
   padding-right: 70px;
   width: 268px;
   align-items: center;
@@ -102,29 +107,31 @@ body {
 .navigation_icons {
   display: flex;
   width: 88px;
-  height: 64px;
-  align-items: center;
+  max-height: 64px;
   margin: 0;
+  vertical-align: middle;
 }
 
 .navigation_link_button {
   background-color: rgba(117, 97, 87, 1);
   border-radius: 4px;
-  font-size: 20px;
   font-weight: 700;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 20px;
   color: rgba(255, 255, 255, 1);
   text-decoration: none;
   text-align: center;
   min-width: 160px;
-  height: 36px;
+  max-height: 36px;
   text-transform: uppercase;
   margin: 0;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .navigation_item {
   max-width: 100px;
-  min-height: 24px;
+  max-height: 24px;
   margin: 0;
   padding-left: 16px;
   padding-right: 16px;
@@ -142,28 +149,26 @@ body {
 .hero_description {
   text-align: center;
   max-width: 0;
+  color: rgba(0, 0, 0, 1);
+  min-width: 651px;
+  align-items: center;
+  padding-right: 275px;
+  padding-left: 275px;
+  padding-bottom: 90px;
   margin: 0;
 }
 
 .hero_title {
   text-transform: uppercase;
   text-align: center;
-  max-width: 620px;
   padding-left: 290px;
   padding-right: 290px;
   padding-top: 69px;
   padding-bottom: 25px;
   margin: 0;
-}
-
-.hero_description {
-  min-width: 651px;
-  align-items: center;
-  padding-right: 275px;
-  padding-left: 275px;
-  padding-top: 25px;
-  padding-bottom: 90px;
-  margin: 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
 }
 
 .advantages {
@@ -172,12 +177,13 @@ body {
 
 .advantages_container {
   display: flex;
-  flex-direction: column;
-  margin: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .advantages_list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
   padding: 0;
@@ -195,6 +201,20 @@ body {
   min-height: 55px;
   margin: 0;
   padding-top: 92px;
+  padding-left: 112.5px;
+  padding-right: 112.5px;
+}
+
+.advantages_title_light_blue {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  min-width: 175px;
+  min-height: 55px;
+  margin: 0;
+  padding-top: 102px;
   padding-left: 112.5px;
   padding-right: 112.5px;
 }
@@ -244,8 +264,8 @@ body {
   background-size: contain;
   content: url("../images/advantages/house.svg");
   position: absolute;
-  top: 60px;
-  left: 162.5px;
+  top: 80px;
+  left: 2.5px;
   right: 162.5px;
 }
 
@@ -255,7 +275,7 @@ body {
   background-size: contain;
   content: url("../images/advantages/food.svg");
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 162.5px;
   right: 162.5px;
 }
@@ -266,7 +286,7 @@ body {
   background-size: contain;
   content: url("../images/advantages/gifts.svg");
   position: absolute;
-  top: 60px;
+  top: 80px;
   left: 162.5px;
   right: 162.5px;
 }
@@ -285,10 +305,11 @@ body {
 }
 
 .advantages_item_blue {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   background-color: rgba(130, 179, 211, 1);
   min-width: 400px;
-  max-height: 384px;
+  min-height: 384px;
   margin: 0;
   color: rgba(255, 255, 255, 1);
 }
@@ -297,12 +318,11 @@ body {
   background-color: rgba(130, 179, 211, 0.12);
   width: 400px;
   min-height: 384px;
-  display: flex;
-  flex-direction: column;
 }
 
-.advantages_item .nolight_blue {
+.advantages_item_nolight_blue {
   display: flex;
+  flex-direction: column;
   background-color: rgba(130, 179, 211, 0.2);
   width: 400px;
   min-height: 384px;
@@ -357,7 +377,7 @@ body {
   text-transform: uppercase;
   margin-left: 412px;
   margin-right: 412px;
-  margin-bottom: 88px;
+  margin-bottom: 96px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 50px;
@@ -379,6 +399,7 @@ body {
   width: 100%;
   height: 414px;
   margin: 0;
+
 }
 
 .subscribe_title {
@@ -387,7 +408,7 @@ body {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(242, 242, 242, 1);
   min-width: 404px;
   padding-top: 96px;
   padding-bottom: 20px;
@@ -412,12 +433,12 @@ body {
 .subscribe_button {
   border-radius: 0 4px 4px 0;
   border: none;
-  width: 232px;
+  width: 242px;
   height: 52px;
-  font-size: 20px;
   font-weight: 700;
-  color: rgba(255, 255, 255, 1);
+  font-size: 20px;
   line-height: 36px;
+  color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
   background-color: rgba(130, 179, 211, 1);
 }
@@ -438,13 +459,14 @@ input {
 
 .page_footer {
   background-color: rgba(255, 255, 255, 1);
-  display: flex;
+  display: grid;
   margin: 0;
 }
 
 .footer_container {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
   max-width: 1060px;
   max-height: 120px;
   margin: 0;
@@ -465,14 +487,22 @@ input {
   margin: 10px;
 }
 
+.footer_navigation_link {
+  margin: 0;
+  width: 115px;
+}
+
 .contacts_tel {
   text-decoration: none;
   color: rgba(0, 0, 0, 1);
+  font-weight: 400;
   font-size: 40px;
-  min-width: 331px;
+  line-height: 40px;
   min-height: 40px;
+  min-width: 331px;
   margin: 0;
-  padding-left: 195px;
+  padding-top: 5px;
+  padding-left: 205px;
   padding-right: 194px;
 }
 
