Микросетки на флексах для всех страниц

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,6 +203,19 @@ body {
   padding-top: 92px;
   padding-left: 112.5px;
   padding-right: 112.5px;
+  position: relative;
+}
+
+.advantages_description::before {
+  content: url("../images/advantages/Decor_gray.svg");
+  background-size: contain;
+  position: absolute;
+  height: 2px;
+  top: 1394px;
+  padding-left: 170px;
+  padding-right: 170px;
+  margin-right: 200px;
+  left: 460px;
 }
 
 .advantages_title_light_blue {
